--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -63,7 +63,7 @@
                 <div class="col-4 bg-light text-center">
                   <div class="input-group">
                     <div class="form-outline">
-                      <input type="text"  min="300"  class="form-control">
+                      <input type="text" #inputname  min="300"  class="form-control">
                     </div>
                   </div>
                 </div>
@@ -82,7 +82,7 @@
                   </div>
                 </div>
                 <div class="col-4 bg-light text-center">
-                  <input type="number"  min="300">
+                  <input type="number" #inputprice min="300">
                 </div>
             </div>
 
