--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -27,7 +27,7 @@
           <div class="carousel-item">
             <img src="assets/im.jpg" alt="New York" class="img-responsive"  width="100%" height="320px">
             <div class="carousel-caption">
-              <h3>New York</h3>
+              <h3 >New York</h3>
               <p>We love the Big Apple!</p>
             </div>
           </div>
@@ -41,6 +41,11 @@
       </div>
     </div>
 
+  </div>
+
+  <input type="text" #totalvalue value="test5555555555555" >
+  <div  >
+    change here
   </div>
 
   <!-- <div class="row mt-3">
@@ -84,20 +89,44 @@
         </div>
       </div>
     </div>
+    assets/im.jpg
   </div> -->
 
-  <div class="row mt-3 ml-1">
-    <div col-md-3>
-      <div class="card" style="width: 20rem;">
-        <img class="card-img-top" src="assets/im.jpg" alt="Card image cap">
+  <div class="row mt-3 " >
+    <div  class="col-md-3">
+        <form (ngSubmit)="onSubmit()" >
+            <label for="name"></label>
+            <input type="number"  [(ngModel)]="prdname"   name="prdname" >
+            <select #sel  class=" form-control btn btn-primary" style=" background-color: wheat; margin-top: -10px;"  name="category" id="cars" class="form-control" [(ngModel)]="SelectedCategory" >
+              <option *ngFor="let cat of categoryArray;"  [value]="cat.CATName" >
+               {{cat.CATName}}
+              </option>
+            </select>
+
+
+
+
+
+            <input type="submit" name="save">
+
+
+        </form>
+    </div>
+
+
+
+
+    <div class="col-md-3"  *ngFor="let item of data;">
+      <div class="card mt-2" style="width: 20rem;">
+        <img class="card-img-top" src=" assets/im.jpg" alt="Card image cap">
         <div class="card-body">
           <div class="caption">
             <div class="caption-top">
               <h5 class="float-right badge-success p-1">
-                $699.99
+                {{item.PRDPrice}}
               </h5>
               <h5>
-                <a href="product.html">Samsung Galaxy S5</a>
+                <a href="product.html">{{item.PRDName}}</a>
               </h5>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim</p>
@@ -113,6 +142,13 @@
 
 
 
+
+ <!-- <div ng-controller="SsbImageController as ssb">
+<h2>{{ssb.heading2}}</h2>
+ <div ng-repeat="images in ssb.products">
+   <img ng-src="{{images.src}}" alt="{{images.alt}}"/>
+ </div>
+</div> -->
 
 
 
