--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -43,11 +43,7 @@
 
   </div>
 
-  <input type="text" #totalvalue value="test5555555555555" >
-  <div  >
-    change here
-  </div>
-
+ 
   <!-- <div class="row mt-3">
     <div class="col-3">
       <div id="accordion">
@@ -94,9 +90,11 @@
 
   <div class="row mt-3 " >
     <div  class="col-md-3">
+      {{prdname}}
         <form (ngSubmit)="onSubmit()" >
-            <label for="name"></label>
-            <input type="number"  [(ngModel)]="prdname"   name="prdname" >
+            
+
+          <input type="text" [(ngModel)]="prdname">
             <select #sel  class=" form-control btn btn-primary" style=" background-color: wheat; margin-top: -10px;"  name="category" id="cars" class="form-control" [(ngModel)]="SelectedCategory" >
               <option *ngFor="let cat of categoryArray;"  [value]="cat.CATName" >
                {{cat.CATName}}
@@ -130,7 +128,7 @@
               </h5>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim</p>
-            <a href="product.html" class="btn btn-primary">View</a>
+            <a  class="btn btn-primary" [routerLink]="['/apiproductbyid',item.id]">View</a>
           </div>
         </div>
      </div>
