--- a/src/app/Components/productdetails/productdetails.component.html
+++ b/src/app/Components/productdetails/productdetails.component.html
@@ -1,13 +1,13 @@
 <div class="container mt-3">
 
-  <div class="row mt-2">
-    <div class="col-4">
-      <img src="{{item.PRDImage}}"  class="img-thumbnail mt-2" style="width:100%">
+  <div class="row mt-2 dfirst " style="height: 300px;">
+    <div class="col-4 fcard  d-flex justify-content-center">
+      <img src=" assets/im.jpg"  class="img-thumbnail mt-2 first " style="width:100%">
     </div>
 
-    <div class="col-8 mt-2">
-      <div class="card">
-        <div class="card-body">
+    <div class="col-8 mt-2  ">
+      <div class="card fcard ">
+        <div class="card-body ">
           <h4 class="card-title text-success mt-2">name is :{{item.PRDName}}</h4>
           <p class="text-info mt-2">price is :{{item.PRDName}}</p>
           <p class="text-primary mt-2">escription:{{item.PRDDesc}}</p>
