--- a/src/app/Components/user/register/register.component.html
+++ b/src/app/Components/user/register/register.component.html
@@ -1,7 +1,26 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div class="col-lg-6 ">
+      <div class="col-3 mt-4">
+        <select
+        class="form-control btn btn-primary col-12"
+        style="background-color: wheat; margin-top: -10px"
+        name="category"
+        id="cars"
+        class="form-control"
+        [(ngModel)]="AccountType">
+        <option  value="bussiness">
+          bussiness
+        </option>
+        <option  value="customer">
+          customer
+        </option>
+      </select>
+      </div>
+
       <form [formGroup]="registerForm" (ngSubmit)="register()">
+
+
         <div class="form-group">
           <label for="">User Name:</label>
           <input type="text" formControlName="UserName" class="form-control" name="user">
@@ -33,7 +52,6 @@
               <strong *ngIf="registerForm.controls['Password'].errors.min"> Password
                 must be more than 3 letters </strong>
             </div>
-
           </div>
           <div class="form-group">
             <label for="">Confirm Password</label>
