add to card (1)

--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -82,6 +82,7 @@
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim</p>
             <a class="btn btn-warning" [routerLink]="['/product' ,item.id]">details</a>
+            <a class="btn btn-warning" [routerLink]="['/order' ,item.id]">Order</a>
           </div>
         </div>
      </div>
