--- a/src/app/Components/productdetails/productdetails.component.html
+++ b/src/app/Components/productdetails/productdetails.component.html
@@ -16,5 +16,20 @@
       <button class="btn btn-success m-2"(click)="GoBack()">go Back</button>
     </div>
   </div>
+  <div class="row">
+    <div class="form-group">
+    <label for="sel1">Select list:</label>
+    <select class="form-control" id="sel1" [(ngModel)]="ratevalue"  >
+      <option [value]="1">1</option>
+      <option [value]="2">2</option>
+      <option [value]="3">3</option>
+      <option [value]="4">4</option>
+      <option [value]="5">5</option>
+    </select>
+   </div>
 
-  </div>
+    </div>
+       <button type="button" class="btn btn-primary" (click)="sRating()">Rating</button>
+    </div>
+
+
