--- a/src/app/Components/addproduct/addproduct.component.html
+++ b/src/app/Components/addproduct/addproduct.component.html
@@ -9,7 +9,7 @@
     <div class="form-group">
         <label for="">Price</label>
         <input #prdPrice="ngModel" type="number" [(ngModel)]="prd.PRDPrice" class="form-control" name="pPrice" required min="1">
-        
+
     </div>
 
     <div class="form-group">
@@ -23,7 +23,7 @@
             </select>
 
 
-            
+
     </div>
 
     <div class="form-group">
@@ -45,6 +45,10 @@
         <label for="">discound</label>
         <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDDiscountPrice" class="form-control" name="pPrice" required >
     </div>
+    <div class="form-group">
+      <label for="">Quantity</label>
+      <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDQuantity" class="form-control" name="pPrice" required >
+  </div>
 
     <button type="submit" class="btn btn-primary" >Save</button>
 </form>
