home design and about and contact

--- a/src/app/Components/about-us/about-us.component.html
+++ b/src/app/Components/about-us/about-us.component.html
@@ -1,1 +1,40 @@
-<p>about-us works!</p>
+<div class="container-fluid bg-dark">
+  <div class="mt-2 mb-4 pt-2 pl-2 bg-dark">
+    <h1 class="font-weight-bolder text-white text-center">ABOUT US</h1>
+  </div>
+  <div>
+    <a
+      class="nav-link font-weight-bold text-white text-center" style="font-size:25px;"
+      routerLink="/Home"
+    >
+      Home
+    </a>
+    <li class="nav-link font-weight-bold text-white d-flex">
+      <strong class="mx-auto" style="font-size:25px;"> About us! </strong>
+    </li>
+  </div>
+</div>
+
+<div class = "container pt-4 pb-4">
+    <div class = "row">
+      <div class = "col-lg-4 col-md-12 col-sm-12 col-xs-12 ">
+        <img src="https://themes.magesolution.com/gemmart/pub/media/wysiwyg/fbuilder/intro-1_1.jpg"  alt="" class="img-responsive" width="100%" height="320px">
+        <h5>What we really do?</h5>
+        <p>Donec libero dolor, tincidunt id laoreet vitae, ullamcorper eu tortor. Maecenas pellentesque,
+          dui vitae iaculis mattis, tortor nisi faucibus magna, vitae ultrices lacus purus vitae metus.</p>
+      </div>
+      <div class = "col-lg-4 col-md-12 col-sm-12 col-xs-12">
+        <img src="https://themes.magesolution.com/gemmart/pub/media/wysiwyg/fbuilder/intro-2_1.jpg" alt="" class="img-responsive" width="100%" height="320px">
+        <h5>Our Vision</h5>
+        <p>Donec libero dolor, tincidunt id laoreet vitae, ullamcorper eu tortor. Maecenas pellentesque,
+          dui vitae iaculis mattis, tortor nisi faucibus magna, vitae ultrices lacus purus vitae metus.</p>
+      </div>
+      <div class = "col-lg-4 col-md-12 col-sm-12 col-xs-12">
+        <img src="https://themes.magesolution.com/gemmart/pub/media/wysiwyg/fbuilder/intro-3_1.jpg" alt="" class="img-responsive" width="100%" height="320px">
+        <h5>History of Beginning</h5>
+        <p>Donec libero dolor, tincidunt id laoreet vitae, ullamcorper eu tortor. Maecenas pellentesque,
+          dui vitae iaculis mattis, tortor nisi faucibus magna, vitae ultrices lacus purus vitae metus.</p>
+      </div>
+    </div>
+</div>
+
