--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -1,3 +1,122 @@
+   <div class="container">
+   <div class="row">
+          <div>
+            <div id="demo2" class="carousel slide" data-ride="carousel">
+              <ul class="carousel-indicators">
+                <li data-target="#demo2" data-slide-to="0" class="active"></li>
+                <li data-target="#demo2" data-slide-to="1"></li>
+                <li data-target="#demo2" data-slide-to="2"></li>
+                <li data-target="#demo2" data-slide-to="3"></li>
+                <li data-target="#demo2" data-slide-to="4"></li>
+              </ul>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="assets/device4.jpg"
+                    alt="devices1"
+                    class="img-responsive"
+                    width="100%"
+                    height="320px"
+                  />
+                  <div class="carousel-caption">
+                    <div>
+                      <h1>Black friday</h1>
+                      <a href="#" class="primary-btn">Shop Now</a>
+                    </div>
+                    <p>We had such a great time in LA!</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="assets/device3.jpeg"
+                    alt="device3"
+                    class="img-responsive"
+                    width="100%"
+                    height="320px"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="assets/device 5.jpg"
+                    alt="device 5"
+                    class="img-responsive"
+                    width="100%"
+                    height="320px"
+                  />
+                  <div class="carousel-caption">
+                    <a href="#" class="primary-btn">Shop Now</a>
+                    <div>
+                      <h2>Sale <span>50%</span></h2>
+                    </div>
+                    <p>We love the Big Apple!</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="assets/device1.jpeg"
+                    alt="device1"
+                    class="img-responsive"
+                    width="100%"
+                    height="320px"
+                  />
+                  <div class="carousel-caption">
+                    <div>
+                      <h1>Black friday</h1>
+                      <a href="#" class="primary-btn">Shop Now</a>
+                    </div>
+                    <div>
+                      <h2>Sale <span>50%</span></h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="assets/device2.jpeg"
+                    alt="device2"
+                    class="img-responsive"
+                    width="100%"
+                    height="320px"
+                  />
+                  <div class="carousel-caption">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-5">
+                          <h1>Black friday</h1>
+                          <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore
+                          </p>
+                          <a href="#" class="primary-btn">Shop Now</a>
+                        </div>
+                      </div>
+                      <div class="off-card">
+                        <h2>Sale <span>50%</span></h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <a
+                  class="carousel-control-prev"
+                  href="#demo2"
+                  data-slide="prev"
+                >
+                  <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#demo2"
+                  data-slide="next"
+                >
+                  <span class="carousel-control-next-icon"></span>
+                </a>
+              </div>
+            </div>
+          </div>
+          </div>
+          </div>
+
 
 <div class="container-fluid">
   <div class="row mt-3">
@@ -7,93 +126,274 @@
           <li data-target="#demo" data-slide-to="0" class="active"></li>
           <li data-target="#demo" data-slide-to="1"></li>
           <li data-target="#demo" data-slide-to="2"></li>
+          <li data-target="#demo" data-slide-to="3"></li>
+          <li data-target="#demo" data-slide-to="4"></li>
         </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/im.jpg" alt="Los Angeles" class="img-responsive" width="100%" height="320px">
+            <img
+              src="assets/device4.jpg"
+              alt="devices1"
+              class="img-responsive"
+              width="100%"
+              height="320px"
+            />
             <div class="carousel-caption">
-              <h3>Los Angeles</h3>
+              <div>
+                <h1>Black friday</h1>
+                <a href="#" class="primary-btn">Shop Now</a>
+              </div>
               <p>We had such a great time in LA!</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/im.jpg" alt="Chicago" class="img-responsive"  width="100%" height="320px">
-            <div class="carousel-caption">
-              <h3>Chicago</h3>
-              <p>Thank you, Chicago!</p>
-            </div>
+            <img
+              src="assets/device3.jpeg"
+              alt="device3"
+              class="img-responsive"
+              width="100%"
+              height="320px"
+            />
+            <div class="carousel-caption"></div>
           </div>
           <div class="carousel-item">
-            <img src="assets/im.jpg" alt="New York" class="img-responsive"  width="100%" height="320px">
+            <img
+              src="assets/device 5.jpg"
+              alt="device 5"
+              class="img-responsive"
+              width="100%"
+              height="320px"
+            />
             <div class="carousel-caption">
-              <h3 >New York</h3>
+              <a href="#" class="primary-btn">Shop Now</a>
+              <div>
+                <h2>Sale <span>50%</span></h2>
+              </div>
               <p>We love the Big Apple!</p>
             </div>
           </div>
+          <div class="carousel-item">
+            <img
+              src="assets/device1.jpeg"
+              alt="device1"
+              class="img-responsive"
+              width="100%"
+              height="320px"
+            />
+            <div class="carousel-caption">
+              <div>
+                <h1>Black friday</h1>
+                <a href="#" class="primary-btn">Shop Now</a>
+              </div>
+              <div>
+                <h2>Sale <span>50%</span></h2>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="assets/device2.jpeg"
+              alt="device2"
+              class="img-responsive"
+              width="100%"
+              height="320px"
+            />
+            <div class="carousel-caption">
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-5">
+                    <h1>Black friday</h1>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore
+                    </p>
+                    <a href="#" class="primary-btn">Shop Now</a>
+                  </div>
+                </div>
+                <div class="off-card">
+                  <h2>Sale <span>50%</span></h2>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
         </div>
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#demo" data-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </a>
       </div>
     </div>
 
-  </div>
+    <div class="container">
+      <div class="row mt-3">
+        <div class="col-md-4">
+          <span>{{ prodName }}</span>
+          <input type="text" [(ngModel)]="prodName" placeholder="item name" />
+          <input type="number" [(ngModel)]="prdprice" placeholder="price" />
 
-
-
-  <div class="row mt-3 " >
-    <div  class="col-md-3">
-
-          <span >{{prodName}}</span>
-          <input type="text" [(ngModel)]="prodName" placeholder="item name">
-          <input type="number" [(ngModel)]="prdprice" placeholder="price">
-
-        <form (ngSubmit)="onSubmit()" >
-            <select #sel  class=" form-control btn btn-primary" style=" background-color: wheat;
-             margin-top: -10px;"  name="category" id="cars" class="form-control"
-              [(ngModel)]="SelectedCategory" >
-              <option *ngFor="let cat of categoryArray;"  [value]="cat.CATName" >
-               {{cat.CATName}}
+          <form (ngSubmit)="onSubmit()">
+            <select
+              #sel
+              class="form-control btn btn-primary"
+              style="background-color: wheat; margin-top: -10px"
+              name="category"
+              id="cars"
+              class="form-control"
+              [(ngModel)]="SelectedCategory"
+            >
+              <option *ngFor="let cat of categoryArray" [value]="cat.CATName">
+                {{ cat.CATName }}
               </option>
-
             </select>
 
-            <input type="submit" name="save">
-        </form>
-
-    </div>
+            <input type="submit" name="save" />
+          </form>
 
 
-    <div class="col-md-3"  *ngFor="let item of data;">
-      <div class="card mt-2" style="width: 20rem;">
-        <img class="card-img-top" src=" assets/im.jpg" alt="Card image cap">
-        <div class="card-body">
-          <div class="caption">
-            <div class="caption-top">
-              <h5 class="float-right badge-success p-1">
-                {{item.PRDPrice}}
-              </h5>
-              <h5>
-                <a href="product.html">{{item.PRDName}}</a>
-              </h5>
+        </div>
+      </div>
+      <!---------------------------------------------------------------------------------->
+
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="product-item">
+              <div class="product-image">
+                <ul class="">
+                  <li class="new mt-4"><span>New</span></li>
+                </ul>
+                <a href="product-detail.html">
+                  <img
+                    src="http://demo.posthemes.com/pos_haltico/91-home_default/720-degree-panoramic-hd-360-video-vr-cameras-dual.jpg"
+                    alt="720 Degree Panoramic HD 360..."
+                  />
+                </a>
+                <div class="product-action">
+                  <a href="#"><i class="fa fa-cart-plus"></i></a>
+                  <a href="#"><i class="fa fa-heart"></i></a>
+                  <a href="#"><i class="fa fa-search"></i></a>
+                </div>
+              </div>
+              <div>
+                <a href="#" class="link"
+                  ><i>720 Degree Panoramic HD 360 Video VR Cameras Dual</i></a
+                >
+              </div>
+              <div class="ratting">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+              <div>
+                <b class="text-primary"><span>$</span>29.00</b>
+              </div>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim</p>
-            <a class="btn btn-warning" [routerLink]="['/product' ,item.id]">details</a>
+          </div>
+
+          <div class="col-md-4">
+            <div class="product-item">
+              <div class="product-image">
+                <ul class="">
+                  <li class="new mt-4"><span>New</span></li>
+                </ul>
+                <a href="product-detail.html">
+                  <img
+                    src="http://demo.posthemes.com/pos_haltico/92-home_default/playstation-4-pro-1tb-star-wars-battlefront-ii-bundle.jpg"
+                    alt="PlayStation 4 Pro 1TB Star Wars Battlefront II..."
+                  />
+                </a>
+                <div class="product-action">
+                  <a href="#"><i class="fa fa-cart-plus"></i></a>
+                  <a href="#"><i class="fa fa-heart"></i></a>
+                  <a href="#"><i class="fa fa-search"></i></a>
+                </div>
+              </div>
+              <div>
+                <a href="#" class="link"
+                  ><i>PlayStation 4 Pro 1TB Star Wars Battlefront II...</i></a
+                >
+              </div>
+              <div class="ratting">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+              <div>
+                <b class="text-primary"><span>$</span>27.55</b>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="product-item">
+              <div class="product-image">
+                <ul class="">
+                  <li class="new mt-4"><span>New</span></li>
+                </ul>
+                <a href="product-detail.html">
+                  <img
+                    src="http://demo.posthemes.com/pos_haltico/80-home_default/canon-vista-fhd-4k-camcorder-2214c002.jpg"
+                    alt="canon vista fhd 4k..."
+                  />
+                </a>
+                <div class="product-action">
+                  <a href="#"><i class="fa fa-cart-plus"></i></a>
+                  <a href="#"><i class="fa fa-heart"></i></a>
+                  <a href="#"><i class="fa fa-search"></i></a>
+                </div>
+              </div>
+              <div>
+                <a href="#" class="link"
+                  ><i>Canon Vista Fhd 4k Camcorder 2214c002</i></a
+                >
+              </div>
+              <div class="ratting">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+              <div>
+                <b class="text-primary"><span>$</span>22.71</b>
+              </div>
+            </div>
           </div>
         </div>
-     </div>
+      </div>
+
+      <!------------------------------------------------------------------------------------------------------------------>
+      <div class="col-md-3" *ngFor="let item of data">
+        <div class="card mt-2" style="width: 20rem">
+          <img class="card-img-top" src=" assets/im.jpg" alt="Card image cap" />
+          <div class="card-body">
+            <div class="caption">
+              <div class="caption-top">
+                <h5 class="float-right badge-success p-1">
+                  {{ item.PRDPrice }}
+                </h5>
+                <h5>
+                  <a href="product.html">{{ item.PRDName }}</a>
+                </h5>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                dignissim
+              </p>
+              <a class="btn btn-warning" [routerLink]="['/product', item.id]"
+                >details</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
-
 </div>
-
-
-
-
-
-
-
