--- a/src/app/Components/productdetails/productdetails.component.html
+++ b/src/app/Components/productdetails/productdetails.component.html
@@ -1,20 +1,114 @@
 <div class="container mt-3">
-
   <div class="row mt-2">
     <div class="col-4">
-      <img src="{{item.PRDImage}}"  class="img-thumbnail mt-2" style="width:100%">
+    <!--"{{ item.PRDImage }}"-->
+      <img
+        src="assets/device1.jpeg"
+        class="img-thumbnail mt-2"
+        style="width: 100%"
+      />
     </div>
 
     <div class="col-8 mt-2">
       <div class="card">
         <div class="card-body">
-          <h4 class="card-title text-success mt-2">name is :{{item.PRDName}}</h4>
-          <p class="text-info mt-2">price is :{{item.PRDName}}</p>
-          <p class="text-primary mt-2">escription:{{item.PRDDesc}}</p>
+          <h4 class="card-title text-success mt-2">
+            name is :{{ item.PRDName }}
+          </h4>
+          <p class="text-info mt-2">price is :{{ item.PRDName }}</p>
+          <p class="text-primary mt-2">escription:{{ item.PRDDesc }}</p>
         </div>
       </div>
-      <button class="btn btn-success m-2"(click)="GoBack()">go Back</button>
+      <button class="btn btn-success m-2" (click)="GoBack()">go Back</button>
+    </div>
+  </div>
+</div>
+
+<!---------------------------------------------------------------------------------------------------------------->
+<div class="container-fluid bg-dark">
+  <div class="mt-2 mb-4 pt-2 pl-2 bg-dark">
+    <h1 class="font-weight-bolder text-white text-center">Micro USB to Type-C Adapter 3pcs</h1>
+  </div>
+  <div>
+    <a class="nav-link font-weight-bold text-white text-center" style="font-size:25px;" routerLink="/Home">Home</a>
+    <li class="nav-link font-weight-bold text-white d-flex"><strong class="mx-auto" style="font-size:25px;"> Micro USB to Type-C Adapter 3pcs </strong></li>
+  </div>
+</div>
+    <link rel="stylesheet" type="text/css" media="all" href="https://themes.magesolution.com/gemmart/pub/static/_cache/merged/4d2d874489c25595097c32bc718e114b.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="https://themes.magesolution.com/gemmart/pub/static/frontend/Mgs/gemmart/en_US/css/styles-l.css" />
+
+  <div class="container mt-4 mb-4">
+    <div class="custom wide catalog-product-view product-micro-usb-to-type-c-adapter-3pcs page-layout-1column">
+     <div class="frame">
+       <div class="line product-detail__infomation__media product-detail-infomation-sticky-parent">
+                            <div class="col-des-6 col-tb-6 col-xs-12">
+                                <div class="product-detail-media loading">
+                                    <div class="product media"><a id="gallery-prev-area" tabindex="-1"></a>
+                                        <div class="vertical-gallery">
+                                            <div class="product-thumbnail-top gallery-vertical  ">
+                                                <div id="owl-carousel-gallery" class="owl-carousel">
+                                                  <img src="assets/device1.jpeg">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-des-6 col-tb-6 col-xs-12 product-detail-infomation product-detail-infomation-sticky ">
+                                <div class="product-detail-infomation-content">
+                                    <div class="product-info-main">
+                                        <h2 class="product-name">Micro USB to Type-C Adapter 3pcs</h2>
+                                        <div class="product-reviews-summary empty">
+                                            <div class="reviews-actions">
+                                                <a class="action add"
+                                                    href="https://themes.magesolution.com/gemmart/en/micro-usb-to-type-c-adapter-3pcs.html#review-form">
+                                                    Be the first to review this product </a>
+                                            </div>
+                                        </div>
+
+                                        <div class="product-info-price">
+                                            <div class="price-box price-final_price" data-role="priceBox"
+                                                data-product-id="60" data-price-box="product-id-60">
+                                                <span class="price-container price-final_price tax weee"
+                                                    itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+                                                    <span id="product-price-60" data-price-amount="19"
+                                                        data-price-type="finalPrice" class="price-wrapper "><span
+                                                            class="price">$19.00</span></span>
+                                                    <meta itemprop="price" content="19" />
+                                                    <meta itemprop="priceCurrency" content="USD" />
+                                                </span>
+
+                                            </div>
+                                        </div>
+
+                                        <div class="product attribute overview">
+                                            <div class="value std" itemprop="description">
+                                                <ul class="list-item-1 item-list">
+                                                    <li>4.5 inch HD Touch Screen (1280 x 720)</li>
+                                                    <li>Android 4.4 KitKat OS</li>
+                                                    <li>1.4 GHz Quad Core™ Processor</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="product-sub-infomation">
+                                            <div class="product-info-stock-sku">
+
+                                                <div class="stock available" title="Availability">
+                                                    Availability:<span class="in-stock">In stock</span>
+                                                </div>
+                                            </div>
+                                            <div class="product attribute sku">
+                                                <strong class="type">SKU</strong> <span class="value"
+                                                    itemprop="sku">DEMOH1_3006</span>
+                                            </div>
+                                            <div class="extra-link">
+                                                <h3>Delivery &amp; Return</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+       </div>
     </div>
   </div>
 
-  </div>
